# routes/api.php
@@ -10,3 +10,13 @@ Route::group(['prefix' => 'auth'], function () {
     Route::get('devices', 'AuthController@getUserDevices');
     Route::post('revokeAll', 'AuthController@revokeAll');
 });
+
+Route::group(['prefix' => 'articles'], function () {
+    Route::get('{article}', 'ArticleController@show');
+
+    Route::group(['middleware' => ['auth:sanctum', 'role:admin|moderator']], function() {
+        Route::post('store', 'ArticleController@store');
+        Route::put('update/{article}', 'ArticleController@update');
+        Route::delete('{article}', 'ArticleController@destroy');
+    });
+});
